--- a/src/components/Task.css
+++ b/src/components/Task.css
@@ -11,3 +11,16 @@
 .task-title {
     cursor:pointer;
 }
+.remove-task-button, .see-task-datails-button {
+    background-color:#444;
+    border: none;
+    font-size: 20px;
+    color: rgb(231, 23, 65);
+    background-color: #444(128, 128, 128);
+    border-radius: 30%;
+    padding: 5px 7px;
+}
+.remove-task-button:hover, .see-task-datails-button:hover{
+    cursor: pointer;
+    background-color:rgb(165, 164, 164);
+}
